# plasmoid_widget_command_launcher

./: .gitignore  CMakeLists.txt  compile.sh  env_setup.sh  metadata.json  qmldir
contents/code/: commandmodel.cpp  commandmodel.h  plugin.cpp  plugin.h  qmldir
contents/config/: config.qml  main.xml
contents/ui/: Config.qml  main.qml
